--- a/pipebutton.config
+++ b/pipebutton.config
@@ -1,2 +1,11 @@
-[settings]
+[os type - windows, linux, mac]
+platform=windows
+
+[custom script mode]
 script_path=powershell.exe -ExecutionPolicy Bypass -File C:\tmp\run_pipecraft.ps1
+
+[shortcut mode]
+shortcut_keys=Keycode.WINDOWS Keycode.R
+
+[typing mode]
+texts_dir=/texts
