upd config - keystrokes

--- a/pipebutton.config
+++ b/pipebutton.config
@@ -5,7 +5,7 @@ platform=windows
 script_path=powershell.exe -ExecutionPolicy Bypass -File C:\tmp\run_pipecraft.ps1
 
 [shortcut mode]
-shortcut_keys=Keycode.WINDOWS Keycode.R
+shortcut_keys=WINDOWS R
 
 [typing mode]
 texts_dir=/texts
